--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "electron-builder install-app-deps && npm run prisma:generate"
   },
   "dependencies": {
+    "@fontsource/tajawal": "^5.0.13",
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/mapped-types": "*",
@@ -22,7 +23,7 @@
     "@vueuse/integrations": "^10.10.0",
     "argon2": "^0.40.1",
     "axios": "^1.7.2",
-    "primevue": "^3.51.0",
+    "primevue": "3.52.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "vee-validate": "^4.12.8",
